images : fixed blurred issue

--- a/components/hamburger/styles.module.css
+++ b/components/hamburger/styles.module.css
@@ -9,7 +9,7 @@
 
 .list {
   position: fixed;
-  background-color: var(--clr-dark-1);
+  background-color: var(--clr-dark-2);
   display: flex;
   flex-direction: column;
   gap: 1rem;
